--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://Maximus135.github.io/avitoContest",
   "name": "avito",
   "version": "0.1.0",
   "private": true,
@@ -15,6 +16,7 @@
     "@types/styled-components": "^5.1.4",
     "axios": "^0.21.0",
     "eslint": "^7.14.0",
+    "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
@@ -27,6 +29,8 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
