--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Maximus135.github.io/avitoContest",
+  "homepage": "http://Maximus135.github.io",
   "name": "avito",
   "version": "0.1.0",
   "private": true,
